--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,13 @@
-<h1>Burger!</h1>
+<div class="text-center">
+ <img src="../public/assets/img/burger.png" alt="burger">
+<h1 class="text-center">Eat-Da-Burger!</h1>
+</div>
 
-<h2>Burgers to devoured!</h2>
+<div class="row text-center">
+ <div class="col-md-6">
+   <h2>Burgers to devoured!</h2>
 
-<ul>
+ <ul>
     {{#each burgers}}
     {{#unless devoured}}
     <li>
@@ -14,7 +19,8 @@
     {{/unless}}
     {{/each}}
 </ul>
-
+</div>
+<div class="col-md-6">
 <h2>Burgers devoured!</h2>
 
 <ul>
@@ -26,7 +32,9 @@
     {{/if}}
     {{/each}}
 </ul>
-
+</div>
+</div>
+<div class="text-center">
 <h2>Add a Burger</h2>
 <form class="create-form">
 
@@ -37,3 +45,4 @@
 
     <button type="submit">Add Burger</button>
 </form>
+</div>
