--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,11 @@
 <div class="text-center">
- <img src="../public/assets/img/burger.png" alt="burger">
+ <img src="assets/img/burger.gif" alt="burger" class="image mt-3">
 <h1 class="text-center">Eat-Da-Burger!</h1>
 </div>
 
 <div class="row text-center">
  <div class="col-md-6">
-   <h2>Burgers to devoured!</h2>
+   <h2>Burgers ready to be devoured!</h2>
 
  <ul>
     {{#each burgers}}
