--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,3 +1,8 @@
+html {
+    position: relative;
+    height: 100%;
+}
+
 body {
-    background-color: coral;
+    background-color: blanchedalmond !important;
 }
