--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,48 +1,60 @@
 <div class="text-center">
- <img src="assets/img/burger.gif" alt="burger" class="image mt-3">
+ <img src="assets/img/burger.gif" alt="burger" class="rounded mt-3">
 <h1 class="text-center">Eat-Da-Burger!</h1>
 </div>
 
-<div class="row text-center">
- <div class="col-md-6">
-   <h2>Burgers ready to be devoured!</h2>
+<div class="row pt-2 pb-5">
+ <div class="col">
+   <h2 class="text-center pt-3 pb-3 mb-4">Burgers ready to be devoured!</h2>
 
- <ul>
+ <ul class="pl-5 offset-2">
     {{#each burgers}}
     {{#unless devoured}}
     <li>
+        <div class="row pb-2">
+            <div class="col-6">
         {{this.burger_name}}
-
-        <button class="devour" data-id="{{this.id}}">Devour!</button>
+        </div>
+        <div class="col-3">
+        <button class="devour btn btn-primary btn-sm" data-id="{{this.id}}">Devour!</button>
+        </div>
+        </div>
     </li>
 
     {{/unless}}
     {{/each}}
 </ul>
 </div>
-<div class="col-md-6">
-<h2>Burgers devoured!</h2>
+<div class="col">
+<h2 class="text-center pt-3 pb-3 mb-4">Burgers devoured!</h2>
 
-<ul>
+<ul class="pl-5 offset-5">
     {{#each burgers}}
     {{#if devoured}}
     <li>
+        <div class="row pb-2">
+            <div class="col">
         {{this.burger_name}}
+        </div>
+      </div>
     </li>
     {{/if}}
     {{/each}}
 </ul>
 </div>
 </div>
-<div class="text-center">
-<h2>Add a Burger</h2>
-<form class="create-form">
+<div class="row">
+    <div class="col">
+      <h2 class="text-center">Add a Burger</h2>
+      <form class="create-form form-inline mb-4 justify-content-center">
 
     <div class="form-group">
-        <label for="burger">Burger Name:</label>
-        <input type="text" id="burger">
+        <label class="mr-2" for="burger">Burger Name:</label>
+        <input type="text" class="form-control-sm" id="burger">
     </div>
 
-    <button type="submit">Add Burger</button>
+    <button type="submit" class="btn btn-success btn-sm ml-3">Add Burger</button>
 </form>
+</div>
+</div>
 </div>
