--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -44,17 +44,16 @@
 </div>
 </div>
 <div class="row">
-    <div class="col">
+    <div class="col" id="addB" >
       <h2 class="text-center">Add a Burger</h2>
       <form class="create-form form-inline mb-4 justify-content-center">
 
-    <div class="form-group">
+     <div class="form-group">
         <label class="mr-2" for="burger">Burger Name:</label>
         <input type="text" class="form-control-sm" id="burger">
-    </div>
+     </div>
 
-    <button type="submit" class="btn btn-success btn-sm ml-3">Add Burger</button>
-</form>
-</div>
-</div>
+      <button type="submit" class="btn btn-success btn-sm ml-3">Add Burger</button>
+       </form>
+    </div>
 </div>
