--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,8 +1,9 @@
 html {
     position: relative;
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
     background-color: blanchedalmond !important;
+    overflow-x: hidden;
 }
